# polafunctor

./: README  index.html  polafunctor.xsl
concept/: AbstractFoo.hpp  GeneratedCompositions.hpp  GeneratedDecomposables.hpp  README
examples/: filters.cpp
inc/: actor.hpp  condition.hpp  event.hpp  filter.hpp  functor.hpp  polafunctor.hpp  proxy.hpp  sink.hpp  source.hpp
test/: test.cpp
tool/: CMakeLists.txt  polafunctorify.cpp
