cmake_minimum_required(VERSION 2.6)
enable_testing()
include(CheckIncludeFile) 
project(polafunctorify C++)
set(prefix      ${CMAKE_INSTALL_PREFIX})
set(exec_prefix ${CMAKE_INSTALL_PREFIX})
set(libdir      ${CMAKE_INSTALL_PREFIX}/lib)
set(includedir  ${CMAKE_INSTALL_PREFIX}/include)
CHECK_INCLUDE_FILE(boost/property_tree/xml_parser.hpp HAVE_PROPERTYTREE_H)
IF(HAVE_SQLITE3_H)
ELSE(HAVE_PROPERTYTREE_H)
  MESSAGE(FATAL_ERROR " header boost/property_tree/xml_parser.hpp  not found.")
ENDIF(HAVE_PROPERTYTREE_H)
add_executable(polafunctorify polafunctorify.c)
install_targets(/bin polafunctorify)
