cmake_minimum_required(VERSION 2.6)
enable_testing()
include(CheckIncludeFileCXX) 
project(polafunctorify CXX)
set(prefix      ${CMAKE_INSTALL_PREFIX})
set(exec_prefix ${CMAKE_INSTALL_PREFIX})
set(libdir      ${CMAKE_INSTALL_PREFIX}/lib)
set(includedir  ${CMAKE_INSTALL_PREFIX}/include)
CHECK_INCLUDE_FILE_CXX(boost/property_tree/ptree.hpp HAVE_PROPERTYTREE_HPP)
IF(HAVE_PROPERTYTREE_HPP)
ELSE(HAVE_PROPERTYTREE_HPP)
  MESSAGE(FATAL_ERROR " header boost/property_tree/ptree.hpp  not found.")
ENDIF(HAVE_PROPERTYTREE_HPP)
CHECK_INCLUDE_FILE_CXX(boost/program_options.hpp HAVE_PROGRAMOPTIONS_HPP)
IF(HAVE_PROGRAMOPTIONS_HPP)
ELSE(HAVE_PROGRAMOPTIONS_HPP)
  MESSAGE(FATAL_ERROR " header boost/program_options.hpp  not found.")
ENDIF(HAVE_PROGRAMOPTIONS_HPP)
add_executable(polafunctorify polafunctorify.cpp)
install_targets(/bin polafunctorify)
